# ethos-rs

./: Cargo.toml  README.md  docker-compose.yml  schema.graphql  seed.sql
migrations/2023-03-22-170540_create_projects/: down.sql  up.sql
migrations/2023-03-22-223545_create_wallets/: up.sql
migrations/2023-03-25-163251_create_profile/: down.sql  up.sql
migrations/2023-03-27-181002_create_collection/: up.sql
migrations/2023-03-27-210241_create_network/: down.sql  up.sql
migrations/2023-03-27-211931_create_collection_contract/: down.sql  up.sql
migrations/2023-03-27-212835_create_nfts/: down.sql  up.sql
migrations/2023-03-27-213608_create_attributes/: down.sql  up.sql
migrations/2023-03-27-214122_create_attributes_on_nft/: down.sql  up.sql
src/: database.rs  errors.rs  graphql.rs  guards.rs  jwt.rs  lib.rs  main.rs  resolvers.rs  schema.rs  services.rs
src/guards/: is_authenticated.rs  with_project.rs
src/services/: auth.rs  nft.rs  profile.rs  project.rs  wallet.rs
