[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.6", features= ["chrono", "uuid"] }
async-graphql-axum = "5.0.6"
axum = "0.6.11"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
ethers = "2.0.1"
fixed-hash = "0.8.0"
jsonwebtoken = "8.3.0"
serde = { version="1.0.158", features=["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
